RESOLVED FIXED270416
REGRESSION(274824@main): [GStreamer][Debug] Triggers assert when running test http/tests/media/video-error-does-not-exist.html
https://bugs.webkit.org/show_bug.cgi?id=270416
Summary REGRESSION(274824@main): [GStreamer][Debug] Triggers assert when running test...
Philippe Normand
Reported 2024-03-03 08:26:00 PST
No idea why the MSE player is used, this is a video served over http... Thread 1 (Thread 0x7fe620cfca40 (LWP 198724)): #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:351 #1 0x00007fe6371e1cf6 in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Assertions.h:780 #2 0x00007fe63d8b9446 in WebCore::MediaPlayerPrivateGStreamerMSE::buffered() const (this=0x7fe6173017c0) at /app/webkit/Source/WebCore/platform/graphics/gstreamer/mse/MediaPlayerPrivateGStreamerMSE.cpp:311 #3 0x00007fe63d642132 in WebCore::MediaPlayer::buffered() const (this=0x7fe6175d87a0) at /app/webkit/Source/WebCore/platform/graphics/MediaPlayer.cpp:1058 #4 0x00007fe63c668e25 in WebCore::HTMLMediaElement::buffered() const (this=0x7fe5aa00a060) at /app/webkit/Source/WebCore/html/HTMLMediaElement.cpp:5875 #5 0x00007fe639b670db in WebCore::jsHTMLMediaElement_bufferedGetter(JSC::JSGlobalObject&, WebCore::JSHTMLMediaElement&) (lexicalGlobalObject=..., thisObject=...) at /app/webkit/WebKitBuild/GTK/Debug/WebCore/DerivedSources/JSHTMLMediaElement.cpp:700 #6 0x00007fe639b7a627 in WebCore::IDLAttribute<WebCore::JSHTMLMediaElement>::get<WebCore::jsHTMLMediaElement_bufferedGetter, (WebCore::CastedThisErrorBehavior)3>(JSC::JSGlobalObject&, JSC::EncodedJSValue, JSC::PropertyName) (lexicalGlobalObject=..., thisValue=140626210879496, attributeName=...) at /app/webkit/Source/WebCore/bindings/js/JSDOMAttribute.h:89 #7 0x00007fe639b67167 in WebCore::jsHTMLMediaElement_buffered(JSC::JSGlobalObject*, JSC::EncodedJSValue, JSC::PropertyName) (lexicalGlobalObject=0x7fe5c6150088, thisValue=140626210879496, attributeName=...) at /app/webkit/WebKitBuild/GTK/Debug/WebCore/DerivedSources/JSHTMLMediaElement.cpp:705 #8 0x00007fe62b8eb734 in WTF::FunctionPtr<(WTF::PtrTag)57072, long (JSC::JSGlobalObject*, long, JSC::PropertyName), (WTF::FunctionAttributes)1>::operator()(JSC::JSGlobalObject*, long, JSC::PropertyName) const (this=0x7ffc89031a40, in#0=0x7fe5c6150088, in#1=140626210879496, in#2=...) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/FunctionPtr.h:106 #9 0x00007fe62bb3ad9c in JSC::PropertySlot::customGetter(JSC::VM&, JSC::PropertyName) const (this=0x7ffc89031a40, vm=..., propertyName=...) at /app/webkit/Source/JavaScriptCore/runtime/PropertySlot.cpp:47 #10 0x00007fe629e83a7a in JSC::PropertySlot::getValue(JSC::JSGlobalObject*, JSC::PropertyName) const (this=0x7ffc89031a40, globalObject=0x7fe5c6150088, propertyName=...) at /app/webkit/Source/JavaScriptCore/runtime/PropertySlot.h:407 #11 0x00007fe629ea91f8 in JSC::JSValue::get(JSC::JSGlobalObject*, JSC::PropertyName, JSC::PropertySlot&) const (this=0x7ffc89031970, globalObject=0x7fe5c6150088, propertyName=..., slot=...) at /app/webkit/Source/JavaScriptCore/runtime/JSCJSValueInlines.h:1040 #12 0x00007fe62b51adcd in JSC::LLInt::performLLIntGetByID(JSC::BytecodeIndex, JSC::CodeBlock*, JSC::JSGlobalObject*, JSC::JSValue, JSC::Identifier const&, JSC::GetByIdModeMetadata&) (bytecodeIndex=..., codeBlock=0x7fe5c6a87ca0, globalObject=0x7fe5c6150088, baseValue=..., ident=..., metadata=...) at /app/webkit/Source/JavaScriptCore/llint/LLIntSlowPaths.cpp:875 #13 0x00007fe62b51b67b in JSC::LLInt::llint_slow_path_get_by_id(JSC::CallFrame*, JSC::JSInstruction const*) (callFrame=0x7ffc89031c00, pc=0x7fe61785e144) at /app/webkit/Source/JavaScriptCore/llint/LLIntSlowPaths.cpp:949 #14 0x00007fe629dafe62 in llint_op_get_by_id () at /app/webkit/Source/JavaScriptCore/llint/LowLevelInterpreter64.asm:141 #15 0x0000000000000000 in ()
Attachments
Philippe Normand
Comment 1 2024-03-03 08:42:51 PST
EWS
Comment 2 2024-03-04 03:57:07 PST
Committed 275619@main (680a3e7a86f9): <https://commits.webkit.org/275619@main> Reviewed commits have been landed. Closing PR #25389 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-03-04 03:58:13 PST
Note You need to log in before you can comment on or make changes to this bug.