REGRESSION(274824@main): [GStreamer][Debug] Triggers assert when running test http/tests/media/video-error-does-not-exist.html https://bugs.webkit.org/show_bug.cgi?id=270416

Reviewed by Xabier Rodriguez-Calvar.

An empty MSE player is created if the non-MSE player fails to load its resource. When that happens
we cannot assert in MediaPlayerPrivateGStreamerMSE::buffered().

* Source/WebCore/platform/graphics/gstreamer/mse/MediaPlayerPrivateGStreamerMSE.cpp:
(WebCore::MediaPlayerPrivateGStreamerMSE::buffered const):

Canonical link: https://commits.webkit.org/275619@main